# FairValue

./: .gitignore  Makefile  README.md  Stocks.py  get_ticker_prices.py  ingest_company_facts.py  ingest_company_facts_v2.py  ingest_filings.py  ingest_submissions.py  ingestion.py  intrinsic_value.py  logger_conf.py  makefile  process_company_facts.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  utils.py
.github/workflows/: test.yml
FairValue/: __init__.py  _calculations.py  _exceptions.py  _ingestion.py  _stock.py  _stocks.py  calculations.py  constants.py  utils.py
FairValue/models/: base.py  financials.py  ingestion.py  ingestion_v2.py  utils.py
FairValue/test/: test_dei.py  test_utils.py
FairValue/tests/: test_datum.py  test_dei.py  test_us_gaap.py  test_utils.py
FairValue/tests/integration/: test_ingestion.py  test_stock.py
FairValue/tests/unit/: test_ingestion.py  test_stock.py  test_utils.py
data/: .gitignore  states_of_incorp.json
fairvalue/: __init__.py  _calculations.py  _exceptions.py  _ingestion.py  _stock.py  utils.py
fairvalue/models/: __init__.py  base.py  financials.py  ingestion.py  sec_ingestion.py
fairvalue/tests/: conftest.py
fairvalue/tests/integration/: conftest.py  test_ingestion.py  test_stock.py
fairvalue/tests/unit/: test_utils.py
models/: base.py  ingestion.py  stock.py  utils.py
scripts/: get_ticker_prices.py  ingest_filings.py  intrinsic_value.py
test/: test_datum.py  test_dei.py  test_us_gaap.py  test_utils.py
tests/data/AAPL/: reconciliation-AAPL.json
tests/integration/: test_stock.py
tests/unit/: test_ingestion.py  test_stock.py
tests/unit/models/: test_base.py  (+4 more)
(+15 files in other folders)
